<resources>
    <string name="app_name">Rendezvous</string>
    <string name="test">Touch Me!</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="discover">Discover</string>
    <string name="friends">Friends</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="new_chat">New Chat</string>
    <string name="chats_title">Rendezvous</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="availability">Availability</string>
    <string name="interests">Interests</string>
    <string name="content_description_dismiss">DISMISS</string>
    <string name="content_description_super_like">SUPER LIKE</string>
    <string name="content_description_like">LIKE</string>
    <string name="location">Fisher\'s bedroom</string>
    <string name="activity">Earth</string>
    <string name="distance">3 km</string>
    <string name="save_on_meats">Save-On-Meats</string>
    <string name="add_members">Add Members</string>
    <string name="suggest">Suggest</string>
    <string name="suggest_subtitle">Here\'s what we think you\'ll like.</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="enter_your_new_group_s_name">Enter your new group\'s name</string>
    <string name="add">+</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="search_for_a_friend">Search for a friend</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="edit_availability">Edit Availability</string>
    <string name="and_here_s_what_we_think_you_ll_like">And here\'s what we think you\'ll like:</string>
    <string name="here_s_what_you_ve_bookmarked">Here\'s what you\'ve bookmarked:</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
...
