...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_rectangle"
            android:padding="4dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Email"
                android:inputType="textEmailAddress"
                app:met_hideUnderline="true"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_rectangle"
            android:padding="4dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Password"
                android:inputType="textPassword"
                app:met_hideUnderline="true"
...
        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_rectangle"
            android:text="Login"
            android:textColor="@color/white"
...
