<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="New Chat"
        android:id="@+id/new_chat"
        app:showAsAction="ifRoom"/>

    <item
        android:title="Add Friends"
        android:id="@+id/add_friends"
        app:showAsAction="never"/>
    <item
        android:title="Requests"
        android:id="@+id/requests"
        app:showAsAction="never"/>
    <item
        android:title="Remove Friends"
        android:id="@+id/remove_friends"
        app:showAsAction="never"/>



</menu>